# Remote-Computer-Monitor

./: .gitignore  CMakePresets.json  TODO.md  package.json
agent/: CMakeLists.txt  CMakeUserPresets.json
agent/include/: commands.h  config.h  httplib.h
agent/src/: CreateShortcut.cpp  CreateShortcut.h  commandPrompts.cpp  commandPrompts.h  commands.cpp  commands.h  config.h  main.cpp  server.cpp
apps/agent/: go.mod  rcma.go
apps/agent-installer/: go.mod  rcm-installer.go
apps/mobile/: app.json  metro.config.js  package.json  tsconfig.json
apps/mobile/app/(tabs)/: _layout.tsx  index.tsx
apps/mobile/components/ui/: icon-symbol.tsx
package/shared/: package.json
package/shared/src/: index.ts  project-constants.ts
